--- a/booster.html
+++ b/booster.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Make it - Marketing Digital</title>
-    <meta name="description" content="Booster el servicio estrella para potenciar tu marca con Google Adds. Atraé todos los clics de tus potenciales clientes.">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <meta name="description" content="Somos una Agencia de Marketing Digital. Certificada como Google Partner. Diseñamos estrategias de marketing digital para grandes empresas y pymes. Integramos recursos de marketing y tecnologia enfocados en incrementar las ventas de tu negocio.">
     <meta name="keywords" content="marketing digital, diseño, google adds, google partner">
+    <title>Make it - Marketing Digital</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="makeitcss.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
 </head>
 
 <body>
-
-
-	<header class="header">
+    <header class="header">
         <div class="navescritorio">
             <nav class="navmenu">
                 <a href="index.html" class="logomenu"><img height="30rem" src="img/make it logo blanco.png"></a>
@@ -49,38 +48,60 @@
         </div>
     </header>
 
+    <section class="booster1">
+        <div class="booster1flex">
+            <h1 class="center">Booster</h1>
+            <p class="center">El impulso qué tu negocio necesita. <br> Atraé todos los clic de tus potenciales clientes de la forma mas eficaz.</p>
+            <div class="boton">
+                <a href="#" style="color: white">
+                    <h4>Ver Más</h4>
+                </a>
+            </div>
+        </div>
+    </section>
 
+    <section class="goolepartner">
+        <div>
+            <div class="goolepartnerflex">
+                <div class="googlepartner-text">
+                    <h2>SOMOS <br> GOOGLE PARTNER</h2>
+                    <p>La insignia de socio de Google demuestra que aprobamos los exámenes de la certificación de productos de Google Ads y que estamos al día con la información sobre productos más reciente. </p>
+                </div>
+                <img src="img/google-partner.png" width="200px" class="sellopartner">
+            </div>
 
-	<section class="booster1">
-		<div class="booster1flex">
-			<h1 class="center">Booster</h1>
-			<p class="center">El impulso qué tu negocio necesita. <br> Atraé todos los clic de tus potenciales clientes de la forma mas eficaz.</p>
-			<div  class="boton"><a href="#" style= "color: white" > <h4>Ver Más</h4> </a> </div> 
-		</div>	
+        </div>
+        <div> <img src="img/googlepartner.png " min-width="100% " class="imgpartner "> </div>
+    </section>
 
-	</section>
+    <section class="booster-section ">
+        <div class="booster-funcion">
+            <h2>¿Cómo Funciona?</h2>
+            <p>Los usuarios de Google encontrarán tu anuncio precisamente <br> cuando estén buscando lo que tu empresa ofrece.</p>
+        </div>
+        <div class="booster-list ">
+            <ol>
+                <li><br><strong> Potenciales clientes te encuentran en Google.</strong> <br> Cuándo alguien busca lo que vos ofreces, por ejemplo, "proveedores de muebles de oficina ", tu sitio web aparece posicionado en los primeros resultados de búsqueda.
+                    Es decir, en la parte superior, aumentando x10 la probabilidad de que ingresen a tu sitio web. Podes segmentar tus anuncios por sexo, edad, país, provincia, ciudad. También podes configurar las campañas para que esten activas en días
+                    y horarios determinados. Por ejemplo, de lunes a viernes de 9 a 18. Únicamente pagas cuando un potencial cliente hace clic sobre el anuncio para ingresar a tu sitio web.</li>
+                <li><br><strong>Ingresan a tu sitio web y te contactan.</strong><br> Al hacer clic en el anuncio, el cliente potencial ingresa a tu sitio web y se contacta a través del Formulario de Contacto o vía Whatsapp para solicitar más información o
+                    un presupuesto. El objetivo es que obtengas la mayor cantidad de consultas posibles, al menor costo posible.</li>
+                <li><br><strong>Contactos y Oportunidades Comerciales ingresan al CRM.</strong><br> Una vez que el cliente potencial completa el formulario de contacto, las consultas ingresarán automáticamente al sistema CRM donde podras dar seguimiento comercial
+                    de forma ordenada y organizada a cada una de ellas. Con el CRM también contarás con reportes detallados en tiempo real para entender que campañas estan obteniendo mejores resultados, así podrás tomar mejores decisiones orientadas a
+                    optimizar el ROI publicitario.</li>
+            </ol>
+        </div>
+    </section>
 
-		<section  class="goolepartner">
-		<div>	
-			<div class="goolepartnerflex" >
-				<h2>SOMOS <br> GOOGLE PARTNER</h2>
-				<p>La insignia de socio de Google demuestra que aprobamos los exámenes de la certificación de productos de Google Ads y que estamos al día con la información sobre productos más reciente. </p>
-			</div>
-			
-		</div>
-		<div> <img src="img/googlepartner.png"  min-width="100%" class="imgpartner"> </div>
-	</section>
-
-
-
-
-	<footer class="footer">
+    <footer class="footer">
         <div style="padding: 50px;">
             <div class="logofooter"><img height="30rem" src="img/make it logo blanco.png"></div>
             <div class="boxfooter">
                 <div class="colfooter">
                     <h3>Contacto</h3>
-                    <h6>hola@makeitdigital.com</h6>
+                    <a href="#">
+                        <h6>hola@makeitdigital.com</h6>
+                    </a>
                     <a href="https://api.whatsapp.com/send?phone=5491154737725&amp;text=Hola%20acabo%20de%20ver%20tu%20p%C3%A1gina!">
                         <h6>1154737725</h6>
                     </a>
@@ -110,19 +131,19 @@
 
                 <div class="colfooter">
                     <h3>Newsletter</h3>
-                    <form class="formcontacto">
-                    <div class="form-group">
-                      <div class="form-group">
-                        <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      </div>
-                      <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
-            </form>
+                    <form class="formcontacto" method="GET" action="#">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
+                    </form>
 
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script>
         function openNav() {
@@ -135,4 +156,6 @@
     </script>
 
 </body>
+
+
 </html>
