--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="boxserviciototal">
                 <div class="renglonvioleta"></div>
                 <div class="boxservicio">
-                    <img class="IconosServicios" src="img/email.png">
+                    <img class="IconosServicios" src="img/remarketing.png">
                     <h3 style="text-align: center;">Remarketing</h3>
                     <p>Mostraremos anuncios a quienes hayan visitado tu sitio web o interactuado con tus posteos en las redes.</p>
                 </div>
@@ -151,7 +151,9 @@
             <div class="boxfooter">
                 <div class="colfooter">
                     <h3>Contacto</h3>
-                    <h6>hola@makeitdigital.com</h6>
+                    <a href="#">
+                        <h6>hola@makeitdigital.com</h6>
+                    </a>
                     <a href="https://api.whatsapp.com/send?phone=5491154737725&amp;text=Hola%20acabo%20de%20ver%20tu%20p%C3%A1gina!">
                         <h6>1154737725</h6>
                     </a>
@@ -181,19 +183,19 @@
 
                 <div class="colfooter">
                     <h3>Newsletter</h3>
-                    <form class="formcontacto">
-                    <div class="form-group">
-                      <div class="form-group">
-                        <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      </div>
-                      <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
-            </form>
+                    <form class="formcontacto" method="GET" action="#">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
+                    </form>
 
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script>
         function openNav() {
