--- a/clientes.html
+++ b/clientes.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Make it - Clientes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <title>Make it - Clientes</title>
     <meta name="description" content="Conoce nuestros trabajos y casos de exito de marketing digital. Somos Make It una agencia digital a tu medida.">
     <meta name="keywords" content="marketing digital, diseño, google adds, google partner, proyectos, portfolio, clientes">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="makeitcss.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
 </head>
+
 <body>
 
-	<header class="header">
+    <header class="header">
         <div class="navescritorio">
             <nav class="navmenu">
                 <a href="index.html" class="logomenu"><img height="30rem" src="img/make it logo blanco.png"></a>
@@ -48,27 +50,27 @@
     </header>
 
 
-	<section class="clientes">
-		<div class="textclientes">
-			<h1>CLIENTES</h1>
-			<p>Gracias por dejarnos acompañarlos y hacer sus proyectos realidad.</p>
-		</div>
-		<div class="gridmarcas">
-			<div><img src="img/luxe.png" class="marcas"></div>
-			<div><img src="img/asiba.png" class="marcas"></div>
-			<div><img src="img/baner.png" class="marcas"></div>
-			<div><img src="img/metri.png" class="marcas"></div>
-			<div><img src="img/modo casa.png" class="marcas"></div>
-			<div><img src="img/bontey.png" class="marcas"></div>
-			<div><img src="img/csb.png" class="marcas"></div>
-			<div><img src="img/trendy.png" class="marcas"></div>
-		</div>
-		<img src="img/shape.png" class="shapesback">
-	</section>
+    <section class="clientes">
+        <div class="textclientes">
+            <h1>CLIENTES</h1>
+            <p>Gracias por dejarnos acompañarlos y hacer sus proyectos realidad.</p>
+        </div>
+        <div class="gridmarcas">
+            <div><img src="img/luxe.png" class="marcas"></div>
+            <div><img src="img/asiba.png" class="marcas"></div>
+            <div><img src="img/baner.png" class="marcas"></div>
+            <div><img src="img/metri.png" class="marcas"></div>
+            <div><img src="img/modo casa.png" class="marcas"></div>
+            <div><img src="img/bontey.png" class="marcas"></div>
+            <div><img src="img/csb.png" class="marcas"></div>
+            <div><img src="img/trendy.png" class="marcas"></div>
+        </div>
+        <img src="img/shape.png" class="shapesback">
+    </section>
 
 
 
-	<footer class="footer">
+    <footer class="footer">
         <div style="padding: 50px;">
             <div class="logofooter"><img height="30rem" src="img/make it logo blanco.png"></div>
             <div class="boxfooter">
@@ -105,18 +107,18 @@
                 <div class="colfooter">
                     <h3>Newsletter</h3>
                     <form class="formcontacto">
-                    <div class="form-group">
-                      <div class="form-group">
-                        <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      </div>
-                      <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
-            </form>
+                        <div class="form-group">
+                            <div class="form-group">
+                                <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
+                    </form>
 
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script>
         function openNav() {
@@ -129,4 +131,5 @@
     </script>
 
 </body>
+
 </html>
