--- a/nosotros.html
+++ b/nosotros.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Make it - Nosotros</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <title>Make it - Nosotros</title>
     <meta name="description" content="Conocé al equipo que hace posible el marketing digital.">
     <meta name="keywords" content="marketing digital, diseño, google adds, google partner, nosotros, equipo">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="makeitcss.css">
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 
 </head>
+
 <body>
 
 
-	<header class="header">
+    <header class="header">
         <div class="navescritorio">
             <nav class="navmenu">
                 <a href="index.html" class="logomenu"><img height="30rem" src="img/make it logo blanco.png"></a>
@@ -49,86 +51,75 @@
     </header>
 
 
-	<section class="quienessomos">
-		<div class="quienessomosflex">
-			<h1 class="center">NOSOTROS</h1>
-			<p class="center">Te invitamos a conocer al equipo completo de Make It.</p>
-		</div>	
-	</section>
+    <section class="quienessomos">
+        <div class="quienessomosflex">
+            <h1 class="center">NOSOTROS</h1>
+            <p class="center">Te invitamos a conocer al equipo completo de Make It.</p>
+        </div>
+    </section>
 
 
-	<section class="integrante">
-		<div class="nosotroscaption">
-				<div>
-					<h2>Belen <br> Media Strategy</h2>
-					<p>#theboss <br>
-						Apodos: Belu, Beli, Belita. <br>
-						Súper poder: Multitasking. 
-						Habilidad: Encuentra todas las aplicaciones necesarias para mantener organizado al equipo completo.<br>
-						Es la que siempre está con la computadora y 2 teléfonos contestando todos los mensajes y llamadas.<br> 
-						Es la founder de la agencia y a las 9 am ya tiene programadas todas las calls del día.</p>
-				</div>
-		</div>
-		<div class="belen"></div>
-	</section>
+    <section class="integrante">
+        <div class="nosotroscaption">
+            <div>
+                <h2>Belen <br> Media Strategy</h2>
+                <p>#theboss <br> Súper poder: Multitasking. <br> Habilidad: Encuentra todas las aplicaciones necesarias para mantener organizado al equipo completo.<br> Es la founder de la agencia y quien está siempre con la computadora y 2 teléfonos contestando
+                    todos los mensajes y llamadas.<br>
+                </p>
+            </div>
+        </div>
+        <div class="belen"></div>
+    </section>
 
 
-	<section class="integrante">
-		<div class="javier"></div>
-		<div class="nosotroscaption">
-				<div>
-					<h2>Javier <br> Content Creator</h2>
-					<p>#theboss <br>
-						Apodos: Belu, Beli, Belita. <br>
-						Súper poder: Multitasking. 
-						Habilidad: Encuentra todas las aplicaciones necesarias para mantener organizado al equipo completo.<br>
-						Es la que siempre está con la computadora y 2 teléfonos contestando todos los mensajes y llamadas.<br> 
-						Es la founder de la agencia y a las 9 am ya tiene programadas todas las calls del día.</p>
-				</div>
-		</div>
-	</section>
+    <section class="integrante">
+        <div class="javier" id="javierimg"></div>
+        <div class="nosotroscaption" id="javiertext">
+            <div>
+                <h2>Javier <br> Content Creator</h2>
+                <p>#Editor <br> Súper poder: Ingenio.<br> Habilidad: Editar a la velocidad de la luz.<br> Siempre pensado nuevas formas de lucir los productos.<br> Motion graphic is his passion.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
-	<section class="integrante">
-		<div class="nosotroscaption">
-				<div>
-					<h2>Melisa <br> Graphic Desing</h2>
-					<p>#theboss <br>
-						Apodos: Belu, Beli, Belita. <br>
-						Súper poder: Multitasking. 
-						Habilidad: Encuentra todas las aplicaciones necesarias para mantener organizado al equipo completo.<br>
-						Es la que siempre está con la computadora y 2 teléfonos contestando todos los mensajes y llamadas.<br> 
-						Es la founder de la agencia y a las 9 am ya tiene programadas todas las calls del día.</p>
-				</div>
-		</div>
-		<div class="melisa"></div>
-	</section>
+    <section class="integrante">
+        <div class="nosotroscaption">
+            <div>
+                <h2>Melisa <br> Graphic Desing</h2>
+                <p>#Illustrator <br> Súper poder: Ilustrar.<br> Habilidad: Distinguir a cáda marca desde lo visual .<br> Amante de las tipografías y paleta de colores, conocé a la perfección la importancia de la identidad de marca.<br>
+                </p>
+            </div>
+        </div>
+        <div class="melisa"></div>
+    </section>
 
 
-	<section class="integrante">
-		<div class="camila"></div>
-		<div class="nosotroscaption">
-				<div>
-					<h2>Camila <br> community</h2>
-					<p>#theboss <br>
-						Apodos: Belu, Beli, Belita. <br>
-						Súper poder: Multitasking. 
-						Habilidad: Encuentra todas las aplicaciones necesarias para mantener organizado al equipo completo.<br>
-						Es la que siempre está con la computadora y 2 teléfonos contestando todos los mensajes y llamadas.<br> 
-						Es la founder de la agencia y a las 9 am ya tiene programadas todas las calls del día.</p>
-				</div>
-		</div>
-	</section>
+    <section class="integrante">
+        <div class="camila" id="camilaimg"></div>
+        <div class="nosotroscaption" id="camilatext">
+            <div>
+                <h2>Camila <br> community</h2>
+                <p>#JustInTime <br> Súper poder: Organización.<br> Habilidad: Está atenta a su propia agenda y la de su equipo.<br> Detrás de un gran posteo, hay una gran community. Cami es quien se encarga de asegurar que todas las entregas y publicaciones
+                    lleguen a tiempo.
+                    <br>
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
-	<footer class="footer">
-        <div>
+    <footer class="footer">
+        <div style="padding: 50px;">
             <div class="logofooter"><img height="30rem" src="img/make it logo blanco.png"></div>
             <div class="boxfooter">
                 <div class="colfooter">
                     <h3>Contacto</h3>
-                    <h6>hola@makeitdigital.com</h6>
+                    <a href="#">
+                        <h6>hola@makeitdigital.com</h6>
+                    </a>
                     <a href="https://api.whatsapp.com/send?phone=5491154737725&amp;text=Hola%20acabo%20de%20ver%20tu%20p%C3%A1gina!">
                         <h6>1154737725</h6>
                     </a>
@@ -158,21 +149,21 @@
 
                 <div class="colfooter">
                     <h3>Newsletter</h3>
-                    <form class="formcontacto">
-					<div class="form-group">
-					  <div class="form-group">
-					    <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
-					  </div>
-					  <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
-			</form>
+                    <form class="formcontacto" method="GET" action="#">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <input type="email" class="form-control inputtext" placeholder="Correo Electrónico" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block" id="buttoncontact">Enviar</button>
+                    </form>
 
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-	<script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script>
         function openNav() {
             document.getElementById("myNav").style.width = "100%";
         }
@@ -183,4 +174,5 @@
     </script>
 
 </body>
+
 </html>
