--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="boxservicio">
                     <img class="IconosServicios" src="img/community.png">
                     <h3 style="text-align: center;">Community</h3>
-                    <p>Administramos tus redes sociales y segmentamos tu publico objetivo. La primera impresión que tus clientes se llevaran.</p>
+                    <p>Administramos tus redes sociales y segmentamos tu publico objetivo. La primera impresión que tus clientes se llevarán.</p>
                 </div>
             </div>
 
