--- a/nosotros.html
+++ b/nosotros.html
@@ -87,7 +87,7 @@
     <section class="integrante">
         <div class="nosotroscaption">
             <div>
-                <h2>Melisa <br> Graphic Desing</h2>
+                <h2>Melisa <br> Graphic Design</h2>
                 <p>#Illustrator <br> Súper poder: Ilustrar.<br> Habilidad: Distinguir a cáda marca desde lo visual .<br> Amante de las tipografías y paleta de colores, conocé a la perfección la importancia de la identidad de marca.<br>
                 </p>
             </div>
